test/scc/expr/semantic-errors/161.a
161.t:9:20: error: braces around scalar initializer